# ico-decision-processing

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
data/: completeness.csv  errors.csv  keywords.xlsx  results.csv
src/ico_decision_processing/: __init__.py  analysis.py  file_operations.py  tests.py
tests/: test_ico_decision_processing.py  test_meta.py
